<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dialerFragment">

    <fragment
        android:id="@+id/dialerFragment"
        android:name="com.migdialer.pro.ui.dialer.DialerFragment"
        android:label="@string/tab_dialer">
        <argument
            android:name="prefill_number"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/recentsFragment"
        android:name="com.migdialer.pro.ui.recents.RecentsFragment"
        android:label="@string/tab_recents" />

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.migdialer.pro.ui.contacts.ContactsFragment"
        android:label="@string/tab_contacts">
        <action
            android:id="@+id/action_contacts_to_detail"
            app:destination="@id/contactDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/contactDetailFragment"
        android:name="com.migdialer.pro.ui.contacts.ContactDetailFragment"
        android:label="Contacto">
        <argument
            android:name="contact_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.migdialer.pro.ui.settings.SettingsFragment"
        android:label="@string/tab_settings" />

</navigation>
